tests/e2e/validation-webhook/envoy/validation/compilation-failure/policy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/playground/refs/heads/main/schemas/json/v3/validatingpolicy-policies.kyverno.io-v1alpha1.json
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: compilation-failure
spec:
  evaluation:
    mode: Envoy
  validations:
  - expression: >
      envoy.Allowed() + 1
